# raftlike

./: .gitignore  Cargo.toml  Makefile  README.md  design.typ
.github/workflows/: ci.yml  rust.yml
scripts/: launch.sh
src/: api.rs  cli.rs  main.rs  network.rs  node.rs  timers.rs
tests/: cluster_tests.rs
